# piv-oac_v5

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  _context_.md  _init_.md  anthropic.py  entrypoint_openai.py  ollama.py  pyproject.toml
.github/workflows/: gate2b.yml  piv-session.yml  pre-merge.yml  staging-gate.yml
agents/: audit_agent.md  bias_auditor.md  coherence_agent.md  compliance_agent.md  documentation_agent.md  domain_orchestrator.md  evaluation_agent.md  execution_auditor.md  logistics_agent.md  orchestrator.md  research_orchestrator.md  security_agent.md  specialist_agent.md  standards_agent.md
config/: settings.yaml
contracts/: _base.md  audit_agent.md  bias_auditor.md  coherence_agent.md  compliance_agent.md  domain_orchestrator.md  evaluation_agent.md  execution_auditor.md  logistics_agent.md  orchestrator.md  research_orchestrator.md  security_agent.md  specialist_agent.md  standards_agent.md
engram/: INDEX.md  VERSIONING.md
git/: policy.md  protection.md  topology.md
metrics/: schema.md
observability/: docker-compose.yml  otel-collector.yaml
sdk/: __init__.py  cli.py  exceptions.py
skills/: bias-audit.md  change-management.md  coherence-analysis.md  complexity-analysis.md  compliance-scoping.md  context-management.md  dag-design.md  documentation-generation.md  engram-management.md  evaluation-rubric.md  fault-recovery.md  gate-protocol.md  git-branch-automation.md  injection-defense.md  manifest.json  metrics-collection.md  observability.md  parallel-safety.md  provider-routing.md  research-methodology.md  session-continuity.md  spec-writing.md  token-budget-estimation.md  vault-protocol.md  worktree-automation.md
sys/: _index.md  _verify.md  bootstrap.sh  git.md  venv.md  worktrees.md
tests/: __init__.py
(+60 files in other folders)
