[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "piv-oac"
version = "5.0.0"
description = "Paradigm of Verifiable Intentionality / Atomic Context Orchestration — AI-guided development framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["ai", "agents", "orchestration", "framework", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",
    "anthropic>=0.28",
    "openai>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
otel = [
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
]

[project.scripts]
piv-oac = "sdk.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sdk*"]

[tool.setuptools.package-data]
"*" = [
    "agents/*.md",
    "contracts/*.md",
    "skills/*.md",
    "skills/manifest.json",
    "sys/*.md",
    "sys/*.sh",
    "git/*.md",
    "engram/**/*.md",
    "specs/_templates/**",
    "config/*.yaml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "UP042"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: pure unit tests, no I/O",
    "integration: requires real filesystem or network",
]
